deploy/infra/envoy-gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gw
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  description: Envoy Gateway Class
